fix: CORS seguro con soporte multi-url